--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <img src="./images/icon-star.svg" alt="">
         <img src="./images/icon-star.svg" alt="">
       </figure>
-      Rated 5 Stars in Reviews
+      <span class="span-sesao-inicial">Rated 5 Stars in Reviews</span>
     </div>
     <div class="bloco-sesao">
       <figure>
@@ -51,7 +51,7 @@
         <img src="./images/icon-star.svg" alt="">
         <img src="./images/icon-star.svg" alt="">
       </figure>
-      Rated 5 Stars in Report Guru
+      <span class="span-sesao-inicial">Rated 5 Stars in Report Guru</span>
     </div>
     <div class="bloco-sesao">
       <figure>
@@ -61,7 +61,7 @@
         <img src="./images/icon-star.svg" alt="">
         <img src="./images/icon-star.svg" alt="">
       </figure>
-      Rated 5 Stars in BestTech
+     <span class="span-sesao-inicial"> Rated 5 Stars in BestTech</span>
     </div>
   </section>
 
@@ -69,9 +69,9 @@
     <article>
       <header>
         <img class="fotos" src="./images/image-colton.jpg" alt="">
-       <div >
+       <div class="sesao-artigos-divisao">
         <h2>Colton Smith</h2>
-        <span>Verified Buyer</span>
+        <span class="span-sesao-artigos">Verified Buyer</span>
        </div>   
       </header>
       <p class="pararafo-artigo">
@@ -83,9 +83,9 @@
     <article>
       <header>
         <img class="fotos" src="./images/image-irene.jpg" alt="">
-        <div>
+        <div class="sesao-artigos-divisao">
         <h2>Irene Roberts</h2>
-        <span>Verified Buyer</span>
+        <span class="span-sesao-artigos">Verified Buyer</span>
         </div>
       </header>
       <p class="pararafo-artigo">"Customer service is always excellent and very quick turn around. Completely
@@ -95,9 +95,9 @@
     <article>
       <header>
   <img class="fotos" src="./images/image-anne.jpg" alt="">
-        <div>
+        <div class="sesao-artigos-divisao">
           <h2>Anne Wallace</h2>
-        <span>Verified Buyer</span>
+        <span class="span-sesao-artigos">Verified Buyer</span>
         </div>
       </header>
       <p class="pararafo-artigo">"Put an order with this company and can only praise them for the very high
