--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
   <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./styles/media-querys.css">
 
   <title>Frontend Mentor | Social proof section</title>
 
@@ -27,13 +28,16 @@
 <body>
 
   <main>
-    <h1>10,000+ of our users love our products.</h1>
+   
+  <section class="sesao-inicial">
+    <div class="divisao-inicial">
+      <h1>10,000+ of our users love our products.</h1>
 
   <p class="paragrafo-1">We only provide great products combined with excellent customer service.
     See what our satisfied customers are saying about our services.</p>
-
-  <section class="sesao-inicial">
-    <div class="bloco-sesao">
+    </div>
+   <section class="sesao-estrelas">
+    <div class="bloco-sesao bloco-sesao-01">
       <figure>
         <img src="./images/icon-star.svg" alt="">
         <img src="./images/icon-star.svg" alt="">
@@ -43,7 +47,7 @@
       </figure>
       <span class="span-sesao-inicial">Rated 5 Stars in Reviews</span>
     </div>
-    <div class="bloco-sesao">
+    <div class="bloco-sesao bloco-sesao-02">
       <figure>
         <img src="./images/icon-star.svg" alt="">
         <img src="./images/icon-star.svg" alt="">
@@ -53,7 +57,7 @@
       </figure>
       <span class="span-sesao-inicial">Rated 5 Stars in Report Guru</span>
     </div>
-    <div class="bloco-sesao">
+    <div class="bloco-sesao bloco-sesao-03">
       <figure>
         <img src="./images/icon-star.svg" alt="">
         <img src="./images/icon-star.svg" alt="">
@@ -63,46 +67,49 @@
       </figure>
      <span class="span-sesao-inicial"> Rated 5 Stars in BestTech</span>
     </div>
+   </section>
   </section>
 
   <section class="sesao-artigos">
-    <article>
-      <header>
-        <img class="fotos" src="./images/image-colton.jpg" alt="">
-       <div class="sesao-artigos-divisao">
-        <h2>Colton Smith</h2>
-        <span class="span-sesao-artigos">Verified Buyer</span>
-       </div>   
-      </header>
-      <p class="pararafo-artigo">
-        "We needed the same printed design as the one we had ordered a week prior.
-        Not only did they find the original order, but we also received it in time.
-        Excellent!"</p>
-    </article>
-  
-    <article>
-      <header>
-        <img class="fotos" src="./images/image-irene.jpg" alt="">
-        <div class="sesao-artigos-divisao">
-        <h2>Irene Roberts</h2>
-        <span class="span-sesao-artigos">Verified Buyer</span>
-        </div>
-      </header>
-      <p class="pararafo-artigo">"Customer service is always excellent and very quick turn around. Completely
-        delighted with the simplicity of the purchase and the speed of delivery."</p>
-    </article>
-  
-    <article>
-      <header>
-  <img class="fotos" src="./images/image-anne.jpg" alt="">
-        <div class="sesao-artigos-divisao">
-          <h2>Anne Wallace</h2>
-        <span class="span-sesao-artigos">Verified Buyer</span>
-        </div>
-      </header>
-      <p class="pararafo-artigo">"Put an order with this company and can only praise them for the very high
-        standard. Will definitely use them again and recommend them to everyone!"</p>
-    </article>
+    <div class="divisao-artigos">
+      <article>
+        <header>
+          <img class="fotos" src="./images/image-colton.jpg" alt="">
+         <div class="sesao-artigos-divisao">
+          <h2>Colton Smith</h2>
+          <span class="span-sesao-artigos">Verified Buyer</span>
+         </div>   
+        </header>
+        <p class="pararafo-artigo">
+          "We needed the same printed design as the one we had ordered a week prior.
+          Not only did they find the original order, but we also received it in time.
+          Excellent!"</p>
+      </article>
+    
+      <article>
+        <header>
+          <img class="fotos" src="./images/image-irene.jpg" alt="">
+          <div class="sesao-artigos-divisao">
+          <h2>Irene Roberts</h2>
+          <span class="span-sesao-artigos">Verified Buyer</span>
+          </div>
+        </header>
+        <p class="pararafo-artigo">"Customer service is always excellent and very quick turn around. Completely
+          delighted with the simplicity of the purchase and the speed of delivery."</p>
+      </article>
+    
+      <article>
+        <header>
+    <img class="fotos" src="./images/image-anne.jpg" alt="">
+          <div class="sesao-artigos-divisao">
+            <h2>Anne Wallace</h2>
+          <span class="span-sesao-artigos">Verified Buyer</span>
+          </div>
+        </header>
+        <p class="pararafo-artigo">"Put an order with this company and can only praise them for the very high
+          standard. Will definitely use them again and recommend them to everyone!"</p>
+      </article>
+    </div>
   </section>
   </main>
   <!--
