--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
   <section class="sesao-artigos">
     <div class="divisao-artigos">
-      <article>
+      <article class="artigo-01">
         <header>
           <img class="fotos" src="./images/image-colton.jpg" alt="">
          <div class="sesao-artigos-divisao">
@@ -86,7 +86,7 @@
           Excellent!"</p>
       </article>
     
-      <article>
+      <article class="artigo-02">
         <header>
           <img class="fotos" src="./images/image-irene.jpg" alt="">
           <div class="sesao-artigos-divisao">
@@ -98,7 +98,7 @@
           delighted with the simplicity of the purchase and the speed of delivery."</p>
       </article>
     
-      <article>
+      <article class="artigo-03">
         <header>
     <img class="fotos" src="./images/image-anne.jpg" alt="">
           <div class="sesao-artigos-divisao">
