--- a/index.html
+++ b/index.html
@@ -39,31 +39,31 @@
    <section class="sesao-estrelas">
     <div class="bloco-sesao bloco-sesao-01">
       <figure>
-        <img src="./images/icon-star.svg" alt="">
-        <img src="./images/icon-star.svg" alt="">
-        <img src="./images/icon-star.svg" alt="">
-        <img src="./images/icon-star.svg" alt="">
-        <img src="./images/icon-star.svg" alt="">
+        <img class="estrela" src="./images/icon-star.svg" alt="">
+        <img class="estrela" src="./images/icon-star.svg" alt="">
+        <img class="estrela" src="./images/icon-star.svg" alt="">
+        <img class="estrela" src="./images/icon-star.svg" alt="">
+        <img class="estrela" src="./images/icon-star.svg" alt="">
       </figure>
       <span class="span-sesao-inicial">Rated 5 Stars in Reviews</span>
     </div>
     <div class="bloco-sesao bloco-sesao-02">
       <figure>
-        <img src="./images/icon-star.svg" alt="">
-        <img src="./images/icon-star.svg" alt="">
-        <img src="./images/icon-star.svg" alt="">
-        <img src="./images/icon-star.svg" alt="">
-        <img src="./images/icon-star.svg" alt="">
+        <img class="estrela"  src="./images/icon-star.svg" alt="">
+        <img class="estrela"  src="./images/icon-star.svg" alt="">
+        <img class="estrela"  src="./images/icon-star.svg" alt="">
+        <img class="estrela"  src="./images/icon-star.svg" alt="">
+        <img class="estrela"  src="./images/icon-star.svg" alt="">
       </figure>
       <span class="span-sesao-inicial">Rated 5 Stars in Report Guru</span>
     </div>
     <div class="bloco-sesao bloco-sesao-03">
       <figure>
-        <img src="./images/icon-star.svg" alt="">
-        <img src="./images/icon-star.svg" alt="">
-        <img src="./images/icon-star.svg" alt="">
-        <img src="./images/icon-star.svg" alt="">
-        <img src="./images/icon-star.svg" alt="">
+        <img class="estrela"  src="./images/icon-star.svg" alt="">
+        <img  class="estrela"  src="./images/icon-star.svg" alt="">
+        <img  class="estrela" src="./images/icon-star.svg" alt="">
+        <img class="estrela"  src="./images/icon-star.svg" alt="">
+        <img class="estrela"  src="./images/icon-star.svg" alt="">
       </figure>
      <span class="span-sesao-inicial"> Rated 5 Stars in BestTech</span>
     </div>
