--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <span class="span-sesao-artigos">Verified Buyer</span>
           </div>
         </header>
-        <p class="pararafo-artigo">"Customer service is always excellent and very quick turn around. Completely
+        <p class="pararafo-artigo pararafo-artigo-02">"Customer service is always excellent and very quick turn around. Completely
           delighted with the simplicity of the purchase and the speed of delivery."</p>
       </article>
     
